fix wrong size of popover profile avatar in some version safari

--- a/app/assets/stylesheets/components/popover_profiles.css.scss
+++ b/app/assets/stylesheets/components/popover_profiles.css.scss
@@ -73,8 +73,8 @@
 
         img {
           @extend .img-circle;
-          height: 100%;
-          width:  100%;
+          height: $popover-profile-avatar-height;
+          width:  $popover-profile-avatar-height;
         }
       }
 
